Improve Code Readability